--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
