Agregar: Dependencia Sweetalert2 para el manejo de alertas y confirmaciones

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.0.3",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sweetalert2": "11.7.5"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
