--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write ./src",
-    "docs": "jsdoc -r ./src"
+    "docs": "jsdoc -r ./src -d ./docs"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
